<resources>
    <string name="app_name">Event Tracker</string>
    <string name="ok">OK</string>
    <string name="enter_type">Enter event type</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_title">Confirm Deletion</string>
    <string name="confirm_delete_message">Are you sure you want to delete this event?</string>
</resources>